# tide-provider

./: .editorconfig  .gitignore  LICENSE  README.md  example.env  format_description.md  format_description.txt  main.py  pyproject.toml  renovate.json
.github/workflows/: workflow.yml
resources/: cuxhaven_2023.txt  cuxhaven_2024.txt  husum_2023.txt  husum_2024.txt  vancouver_2023.csv  vancouver_2024.csv
src/tests/: test_parsing.py
src/tide_provider/: api.py  main.py
