[tool.poetry]
name = "tide_provider"
description = "Provides tidal data to API"
version = "1.0.0"
authors = ["Blindfolded Surgery <team@blindfolded.surgery>"]
license = "MIT"

[tool.poetry.scripts]
tide_provider = "tide_provider.main:main"
publish = "tide_provider.main:publish"

[[tool.poetry.source]]
name = "internal"
url = "https://pypi.blindfolded.surgery"
priority = "explicit"

[tool.poetry.dependencies]
bs-config = { version = "1.0.1", source = "internal", extras = ["dotenv"] }
httpx = "^0.26.0"
python = "~3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "~1.8"
pytest = "^8.0.0"
ruff = "0.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = true
disallow_untyped_defs = false

[tool.ruff]
extend-select = [
    "I001",
]
